--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -26,11 +26,18 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.1.0411</th>
+    <th>v1.0.2.0419</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/QA/manifest.plist">Install APP</a></th>
   </tr>
   </table>
   <table align="center">
+      <tr>
+       <td>
+           Release_Note:<p/>
+           1. 收到notification後，delay time再get cloud的數值<br/>
+           2. 新增顯示 updated time<br/>
+           </td>
+           </tr>
   <tr>
       <td>
       Installation Notes<p/><p/>
