--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -26,7 +26,7 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.2.0423.7</th>
+    <th>v1.0.2.0430</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/QA/manifest.plist">Install APP</a></th>
   </tr>
   </table>
@@ -34,8 +34,10 @@ tr:nth-child(even) {
       <tr>
        <td>
            Release_Note:<p/>
-           1. 收到notification後，delay time再get cloud的數值<br/>
-           2. 新增顯示 updated time<br/>
+           1. 1. 新增Provision 頁面更新 permission<br/>
+           2. permission Read :
+           修正點選 Add it 顯示訊息
+           "You can't add new devices to the site you selected because it doesn't have permissions"<br/>
            </td>
            </tr>
   <tr>
