--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
       <tr>
        <td>
            Release_Note:<p/>
-           1. 1. 新增Provision 頁面更新 permission<br/>
+           1. 新增Provision 頁面更新 permission<br/>
            2. permission Read :
            修正點選 Add it 顯示訊息
            "You can't add new devices to the site you selected because it doesn't have permissions"<br/>
