--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -26,7 +26,7 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.2.0430</th>
+    <th>v1.0.2.0502</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/QA/manifest.plist">Install APP</a></th>
   </tr>
   </table>
@@ -34,10 +34,7 @@ tr:nth-child(even) {
       <tr>
        <td>
            Release_Note:<p/>
-           1. 新增Provision 頁面更新 permission<br/>
-           2. permission Read :
-           修正點選 Add it 顯示訊息
-           "You can't add new devices to the site you selected because it doesn't have permissions"<br/>
+           1. 修正Provisioning頁面點選 Site<br/>
            </td>
            </tr>
   <tr>
