--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -35,6 +35,7 @@ tr:nth-child(even) {
        <td>
            Release_Note:<p/>
            1. 修正Provisioning頁面點選 Site<br/>
+           2. 修正font otf file<br/>
            </td>
            </tr>
   <tr>
