--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -26,7 +26,7 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.2.0503.1</th>
+    <th>v1.0.3.0507</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/QA/manifest.plist">Install APP</a></th>
   </tr>
   </table>
@@ -34,8 +34,7 @@ tr:nth-child(even) {
       <tr>
        <td>
            Release_Note:<p/>
-           1. 修正Provisioning頁面點選 Site<br/>
-           2. 修正font otf file<br/>
+           1. 修正Permission<br/>
            </td>
            </tr>
   <tr>
