--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -34,7 +34,7 @@ tr:nth-child(even) {
       <tr>
        <td>
            Release_Note:<p/>
-           1. 新增 provisioning 可以搜尋 site
+           1. 新增 provisioning 可以搜尋 site<br/>
            BugFixed : No.1 ,4 , 6<br/>
            </td>
            </tr>
