--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -26,7 +26,7 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.3.0604</th>
+    <th>v1.0.3.0604.1</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/QA/manifest.plist">Install APP</a></th>
   </tr>
   </table>
@@ -34,8 +34,7 @@ tr:nth-child(even) {
       <tr>
        <td>
            Release_Note:<p/>
-           1. 新增 provisioning 可以搜尋 site<br/>
-           BugFixed : No.1 ,4 , 6<br/>
+           BugFixed : No.4<br/>
            </td>
            </tr>
   <tr>
