--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -26,7 +26,7 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.3.0605</th>
+    <th>v1.0.3.0611</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/QA/manifest.plist">Install APP</a></th>
   </tr>
   </table>
@@ -34,7 +34,8 @@ tr:nth-child(even) {
       <tr>
        <td>
            Release_Note:<p/>
-           1. 新增刪除時,無法點選進入推播頁面<br/>
+           1. 修正push name<br/>
+           2. 修正讀取api順序(units->sensors)<br/>
            </td>
            </tr>
   <tr>
