--- a/QA/Gosensor_QA.html
+++ b/QA/Gosensor_QA.html
@@ -26,7 +26,7 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.3.0627</th>
+    <th>v1.0.3.0702</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/QA/manifest.plist">Install APP</a></th>
   </tr>
   </table>
@@ -35,9 +35,7 @@ tr:nth-child(even) {
        <td>
            Release_Note:<p/>
            BugFix :<br/>
-               1. Operator UI 不顯示 service's name<br/>
-               2. History 統一Y軸最大值<br/>
-               3. Clibration 選單子項預設開啟<br/>
+               1. 修正使用者A多台裝置登出,再登入使用者B 0台裝置<br/>
            </td>
            </tr>
   <tr>
