--- a/Dev/Gosensor_Dev.html
+++ b/Dev/Gosensor_Dev.html
@@ -26,7 +26,7 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.4.0821</th>
+    <th>v1.0.4.0827</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/Dev/manifest.plist">Install APP</a></th>
   </tr>
   </table>
@@ -35,7 +35,7 @@ tr:nth-child(even) {
        <td>
            Release_Note:<p/>
            Test :<br/>
-             mDNS<br/>
+             unset<br/>
            </td>
            </tr>
   <tr>
