--- a/Dev/Gosensor_Dev.html
+++ b/Dev/Gosensor_Dev.html
@@ -35,7 +35,7 @@ tr:nth-child(even) {
        <td>
            Release_Note:<p/>
            Test :<br/>
-             unset<br/>
+             QR Code 功能<br/>
            </td>
            </tr>
   <tr>
