--- a/UAT/Gosensor_UAT.html
+++ b/UAT/Gosensor_UAT.html
@@ -26,11 +26,17 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.0.3.0702</th>
+    <th>v1.1.0.0906</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/UAT/manifest.plist">Install APP</a></th>
   </tr>
   </table>
   <table align="center">
+      <tr>
+       <td>
+           Release_Note:<p/>
+           1. 新增 QR Code 功能<br/>
+           </td>
+           </tr>
   <tr>
       <td>
       Installation Notes<p/><p/>
