--- a/UAT/Gosensor_UAT.html
+++ b/UAT/Gosensor_UAT.html
@@ -26,7 +26,7 @@ tr:nth-child(even) {
 <table align="center">
   <tr>
     <th>Gosensor</th>
-    <th>v1.1.0.0910</th>
+    <th>v1.1.0.0910.1</th>
     <th><a class="button button-primary" href="itms-services://?action=download-manifest&url=https://edimax-iotapp.github.io/Gosensor/UAT/manifest.plist">Install APP</a></th>
   </tr>
   </table>
@@ -36,6 +36,8 @@ tr:nth-child(even) {
            Release_Note:<p/>
            1. 新增 QR Code 功能<br/>
            2. 新增 "If you cannot find the machine, please connect to the same network as the machine with WIFI." 提示<br/>
+           3. BugFix:<br/>
+           No.272,274,275,277<br/>
            </td>
            </tr>
   <tr>
